--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -23,43 +23,10 @@
 
         position: relative;
 
+        width: 100%;
+
         &:not(:last-child) {
             margin-bottom: 20px;
-        }
-
-        &:before,
-        &:after {
-            font-size: 1.2rem;
-            line-height: 1.4rem;
-            font-weight: 500;
-
-            border-radius: 50%;
-
-            position: absolute;
-            top: 50%;
-            right: 10px;
-
-            transform: translateY(-50%);
-
-            width: 25px;
-            height: 25px;
-
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        &--invalid {
-            &:before {
-                content: 'ok';
-                background-color: rgb(114, 231, 114);
-            }
-        }
-        &--valid {
-            &:before {
-                content: 'x';
-                background-color: lightcoral;
-            }
         }
     }
 
@@ -75,7 +42,7 @@
         line-height: 1.9rem;
         font-weight: 400;
 
-        width: 200px;
+        width: 100%;
 
         background-color: transparent;
 
@@ -92,15 +59,9 @@
     }
 
     &__footer {
-        margin-top: 50px;
+        margin-top: 20px;
 
         display: flex;
         justify-content: flex-end;
-    }
-
-    &__button {
-        &:not(last-child) {
-            margin-right: 10px;
-        }
     }
 }
