--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -13,6 +13,10 @@
 
     &__user {
         margin: auto 0;
+
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
     }
 
     &__nav {
