--- a/src/styles/components/_popup.scss
+++ b/src/styles/components/_popup.scss
@@ -9,14 +9,26 @@
     bottom: 0;
     background-color: rgba(#000, 0.5);
 
+    &__overflow {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+
+        z-index: 1;
+    }
+
     &__inner {
         background-color: var(--white);
 
         margin: auto;
-        width: 100%;
-        max-width: 500px;
+        min-width: 300px;
 
         padding: 15px;
+
+        position: relative;
+        z-index: 2;
     }
 
     &--open {
