--- a/src/styles/sections/_register-user.scss
+++ b/src/styles/sections/_register-user.scss
@@ -7,7 +7,15 @@
         color: var(--black);
     }
 
+    &__paragraph {
+        margin-top: 10px;
+
+        font-weight: 400;
+        font-size: 1.4rem;
+        max-width: 300px;
+    }
+
     &__form {
-        margin-top: 20px;
+        margin-top: 10px;
     }
 }
