fix: change architecture

--- a/src/assets/styles/components/_play-card.scss
+++ b/src/assets/styles/components/_play-card.scss
@@ -33,19 +33,19 @@
     }
 
     &--canyon {
-        background-image: url('../../assets/images/placeholders/canyon.jpg');
+        background-image: url("../../images/placeholders/canyon.jpg");
     }
     &--city {
-        background-image: url('../../assets/images/placeholders/city.jpg');
+        background-image: url("../../images/placeholders/city.jpg");
     }
     &--forest {
-        background-image: url('../../assets/images/placeholders/forest.jpg');
+        background-image: url("../../images/placeholders/forest.jpg");
     }
     &--mounts {
-        background-image: url('../../assets/images/placeholders/mounts.jpg');
+        background-image: url("../../images/placeholders/mounts.jpg");
     }
     &--shine {
-        background-image: url('../../assets/images/placeholders/shine.jpg');
+        background-image: url("../../images/placeholders/shine.jpg");
     }
     &--open {
         background-image: none;
